(menhir
 (modules grammar)
 (flags (--table --explain --unused-tokens)))

(env (dev (flags (:standard -w -30 -warn-error -A))))

(library
 (name lang)
 (libraries pprint menhirLib sedlex)
 (modes native)
 ; sedlex only needed for sedlex.ppx, but per_module breaks Merlin
 (preprocess (pps sedlex.ppx)))
